# Powerpoint_MCP_CrossPlatform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
powerpoint_mcp_server/: __init__.py  __main__.py  main.py  powerpoint_adapter.py
tests/: __init__.py  test_adapter.py  test_main.py
